[package]
name = "dev-tool"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
structopt = "0.3.22"
xayn-ai = { path="../xayn-ai" }
serde = { version="1.0.127", features=["derive"]}
serde_json = "1.0.66"
base64 = "0.13.0"
