[package]
name = "dev-tool"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
structopt = "0.3.23"
xayn-ai = { path="../xayn-ai" }
serde = { version="1.0.127", features=["derive"]}
serde_json = "1.0.66"
bincode = "1.3.3"
base64 = "0.13.0"
rand = "0.8.3"
ndarray = "0.15.3"
log = "0.4.14"
env_logger =  "0.9.0"
thiserror = "1.0.26"
displaydoc = "0.2.3"
csv = "1.1.6"
uuid = "0.8.2"
itertools = "0.10.0"
indicatif = "0.16.2"
rayon = "1.5.1"

[dev-dependencies]
float-cmp = "0.9.0"
