[package]
name = "dev-tool"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
bincode = "1.3.3"
csv = "1.1.6"
displaydoc = "0.2.3"
env_logger =  "0.9.0"
indicatif = "0.16.2"
itertools = "0.10.3"
layer = { path = "../layer" }
log = "0.4.14"
ndarray = "0.15.3"
rand = "0.8.5"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
structopt = "0.3.26"
thiserror = "1.0.30"
uuid = "0.8.2"
xayn-ai = { path = "../xayn-ai" }

[dev-dependencies]
test-utils = { path = "../test-utils" }
