[package]
name = "kpe"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

[dependencies]
derive_more = { version = "0.99.16", default-features = false, features = ["deref", "from"] }
displaydoc = "0.2.3"
# to be kept in sync with tract-core
ndarray = "=0.15.3"
rubert-tokenizer = { path = "../rubert-tokenizer" }
thiserror = "1.0.29"
tract-onnx = "0.15.4"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
test-utils = { path = "../test-utils" }

[[bench]]
name = "kpe"
harness = false
bench = false
