[package]
name = "rubert-tokenizer"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2.1"
num-traits = "0.2.14"
regex = "1.4.5"
regex-syntax = "0.6.23"
smallstr = "0.2.0"
thiserror = "1.0.24"
unicode_categories = "0.1.1"
unicode-normalization-alignments = "0.1.12"
