[package]
name = "rubert-tokenizer"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2.3"
num-traits = "0.2.14"
regex = "1.5.4"
regex-syntax = "0.6.25"
smallstr = "0.2.0"
thiserror = "1.0.29"
unicode_categories = "0.1.1"
unicode-normalization-alignments = "0.1.12"
