[package]
name = "rubert-tokenizer"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
displaydoc = "0.2.3"
num-traits = "0.2.15"
regex = "1.5.4"
regex-syntax = "0.6.25"
smallstr = "0.3.0"
thiserror = "1.0.30"
unicode-normalization-alignments = "0.1.12"
unicode_categories = "0.1.1"
