[package]
name = "rubert"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.14", default-features = false, features = ["deref", "from"] }
displaydoc = "0.2.1"
float-cmp = "0.8.0"
# to be kept in sync with tract-core
ndarray = { version = "=0.15.3", features = ["serde"] }
rubert-tokenizer = { path = "../rubert-tokenizer" }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
tract-onnx = { git = "https://github.com/xaynetwork/tract", branch = "master" }

# example: validate (they can't be put under dev-dependencies because those are not allowed to be optional which in turn fails cross compilation in the ci)
csv = { version = "1.1.6", optional = true }
indicatif = { version = "0.16.2", optional = true }
onnxruntime = { version = "0.0.12", optional = true }

[features]
validate = ["csv", "indicatif", "onnxruntime"]

[[example]]
name = "mbert"

[[example]]
name = "validate"
test = false
required-features = ["validate"]
