[package]
name = "rubert"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

[dependencies]
derive_more = { version = "0.99.16", default-features = false, features = ["deref", "from"] }
displaydoc = "0.2.3"
float-cmp = "0.9.0"
# to be kept in sync with tract-core
ndarray = { version = "=0.15.3", features = ["serde"] }
rubert-tokenizer = { path = "../rubert-tokenizer" }
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
tract-onnx = "0.15.5"

# features
criterion = { version = "0.3.5", features = ["html_reports"], optional = true }
csv = { version = "1.1.6", optional = true }
indicatif = { version = "0.16.2", optional = true }
onnxruntime = { version = "0.0.13", optional = true }
rayon = { version = "1.5.1", optional = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }

[features]
bench = ["criterion", "onnxruntime", "rayon"]
validate = ["csv", "indicatif", "onnxruntime"]

[[example]]
name = "mbert"

[[example]]
name = "validate"
required-features = ["validate"]

[[bench]]
name = "matmul"
harness = false
bench = false
required-features = ["bench"]

[[bench]]
name = "mbert"
harness = false
bench = false
required-features = ["bench"]

[[bench]]
name = "multithreaded"
harness = false
bench = false
required-features = ["bench"]
