[package]
name = "test-utils"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
publish = false

[dependencies]
float-cmp = "0.9.0"
# to be kept in sync with rubert
ndarray = "=0.15.3"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.78"
