[package]
name = "xayn-ai-ffi-c"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.13", default-features = false, features = ["display"] }
xayn-ai = { path = "../xayn-ai" }

[dev-dependencies]
itertools = "0.10.0"

[build-dependencies]
cbindgen = "=0.18.0"

[lib]
crate-type = ["cdylib", "staticlib"]
