[package]
name = "xayn-ai-ffi-c"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.2"
xayn-ai = { path = "../xayn-ai" }
xayn-ai-ffi = { path = "../xayn-ai-ffi" }

# multithreaded feature
rayon = { version = "1.5.1", optional = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }
float-cmp = "0.9.0"
itertools = "0.10.1"
tempfile = "3.2.0"

[build-dependencies]
cbindgen = "=0.20.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["multithreaded"]
multithreaded = ["rayon", "xayn-ai/multithreaded"]
