[package]
name = "xayn-ai-ffi-c"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

[dependencies]
uuid = "0.8.2"
xayn-ai = { path = "../xayn-ai" }
xayn-ai-ffi = { path = "../xayn-ai-ffi" }

# multithreaded feature
rayon = { version = "1.5.1", optional = true }

[dev-dependencies]
itertools = "0.10.3"
tempfile = "3.3.0"
test-utils = { path = "../test-utils" }

[build-dependencies]
cbindgen = "=0.20.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["multithreaded"]
multithreaded = ["rayon", "xayn-ai/multithreaded"]
