[package]
name = "xayn-ai-ffi-wasm"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.3", features = ["js"] }
js-sys = "0.3.52"
rayon = "1.5.1"
serde = { version = "1.0.127", features = ["derive"] }
wasm-bindgen = { version = "=0.2.75", features = ["serde-serialize"] }
wasm-bindgen-rayon = {  version = "1.0.3" }
# wasm-bindgen-rayon = {  version = "1.0.3",  features = ["no-bundler"] }
xayn-ai = { path = "../xayn-ai", features = ["parallel"] }
xayn-ai-ffi = { path = "../xayn-ai-ffi" }

[dev-dependencies]
itertools = "0.10.1"
wasm-bindgen-test = "0.3.25"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.profiling]
# -g is required to keep the original function names
wasm-opt = ['-O', '-g']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '-g']

[features]
default = ["browser"]
browser =[]
node = []
