[package]
name = "xayn-ai-ffi"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
serde = { version = "1.0.135", features = ["derive"] }
serde_repr = "0.1.7"
xayn-ai = { path = "../xayn-ai" }

[build-dependencies]
cbindgen = "=0.20.0"
