[package]
name = "xayn-ai"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bincode = "1.3.3"
derive_more = { version = "0.99.16", default-features = false, features = ["from", "display"] }
displaydoc = "0.2.3"
itertools = "0.10.1"
# to be kept in sync with rubert
ndarray = "=0.15.3"
rand = "0.8.4"
rand_distr = "0.4.2"
rubert = { path = "../rubert" }
serde = { version = "1.0.130", features = ["derive"] }
serde_repr = "0.1.7"
smallvec = "1.6.1"
thiserror = "1.0.29"
uuid = { version = "0.8.2", features = ["serde", "wasm-bindgen", "v4"] }

# parallel feature
rayon = { version = "1.5.1", optional = true}

[dev-dependencies]
csv = "1.1.6"
test-utils = { path = "../test-utils" }
float-cmp = "0.9.0"
maplit = "1.0.2"
mockall = "0.10.2"
once_cell = "1.8.0"
paste = "1.0.5"
rstest = "0.11.0"
rstest_reuse = "0.1.3"

[features]
parallel = ["rayon"]
