[package]
name = "xayn-ai"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

[dependencies]
anyhow = "1.0.47"
bincode = "1.3.3"
derive_more = { version = "0.99.16", default-features = false, features = ["from", "display"] }
displaydoc = "0.2.3"
itertools = "0.10.1"
layer = { path = "../layer" }
# to be kept in sync with rubert
ndarray = "=0.15.3"
# TODO: use version 1.0.5 once it is released
obake = { git = "https://github.com/doctorn/obake", rev = "d6bea07e355ca4adf353c1e627f13c8c3286361b" }
rand = "0.8.4"
rubert = { path = "../rubert" }
serde = { version = "1.0.130", features = ["derive"] }
serde_repr = "0.1.7"
smallvec = "1.7.0"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde", "wasm-bindgen", "v4"] }

# multithreaded feature
rayon = { version = "1.5.1", optional = true }

[dev-dependencies]
csv = "1.1.6"
maplit = "1.0.2"
mockall = "0.10.2"
once_cell = "1.8.0"
paste = "1.0.6"
rstest = "0.11.0"
rstest_reuse = "0.1.3"
test-utils = { path = "../test-utils" }

[features]
multithreaded = ["rayon"]
