[package]
name = "xayn-ai"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
chrono = { version = "0.4.19", default-features = false }
derivative = "2.2.0"
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "display", "from", "into"] }
displaydoc = "0.2.3"
itertools = "0.10.3"
kpe = { path = "../kpe" }
layer = { path = "../layer" }
lazy_static = "1.4.0"
# to be kept in sync with rubert
ndarray = "=0.15.3"
# TODO: use version 1.0.5 once it is released
obake = { git = "https://github.com/doctorn/obake", rev = "d6bea07e355ca4adf353c1e627f13c8c3286361b" }
rand = "0.8.5"
regex = { version = "1.5.5", features = ["unicode-gencat"] }
rubert = { path = "../rubert" }
serde = { version = "1.0.136", features = ["derive"] }
serde_repr = "0.1.7"
smallvec = "1.8.0"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde", "wasm-bindgen", "v4"] }

# multithreaded feature
rayon = { version = "1.5.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.56"

[dev-dependencies]
csv = "1.1.6"
mockall = "0.11.0"
once_cell = "1.10.0"
paste = "1.0.6"
rstest = "0.12.0"
rstest_reuse = "0.3.0"
serde_json = "1.0.79"
test-utils = { path = "../test-utils" }

[features]
multithreaded = ["rayon"]
